Add Simple Analytics Public  Dashboard and ML Magic

--- a/app-name/public/index.html
+++ b/app-name/public/index.html
@@ -20,6 +20,9 @@
     -->
     <title>Knust WTF App</title>
   </head>
+  <!-- 100% privacy friendly analytics --> 
+<script data-collect-dnt="true" async defer src="https://scripts.simpleanalyticscdn.com/latest.js"></script> 
+<noscript><img src="https://queue.simpleanalyticscdn.com/noscript.gif?collect-dnt=true" alt="" referrerpolicy="no-referrer-when-downgrade" /></noscript>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
